--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,6 @@ header i{
 header i:hover{
     color: #FF8811;
 }
+nav{
+    /* background-color: #FF8811; */
+    /* background: linear-gradient( 45deg, #C7EF00, #FF8811 ,#CA054D); */
