--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,16 @@ header i:hover{
 nav{
     /* background-color: #FF8811; */
     /* background: linear-gradient( 45deg, #C7EF00, #FF8811 ,#CA054D); */
+}
+nav ul.navbar-nav li:hover{
+    background:linear-gradient(45deg, #e09027, #f18921 ,#f8a35e)
+}
+nav.navbar{
+    padding-top: 0px!important;
+    padding-bottom: 0px!important;
+}
+nav a, a.navbar-brand{
+    padding-top: 30px!important;
+    padding-bottom: 30px!important;
+    font-size: 24px ;
+}
